--- a/i18n/it.yaml
+++ b/i18n/it.yaml
@@ -1,116 +1,122 @@
-- id: "Site Menu"
+- id: "menu.aside.tooltip"
   translation: "Menu"
 
-- id: "Toggle Menu"
+- id: "menu.toggle.tooltip"
   translation: "Espandi/comprimi menu"
 
-- id: "Open Menu"
+- id: "menu.open.tooltip"
   translation: "Apri menu"
 
-- id: "Site ToC"
+- id: "toc.aside.tooltip"
   translation: "Indice"
 
-- id: "Toggle ToC"
+- id: "toc.toggle.tooltip"
   translation: "Espandi/comprimi indice"
 
-- id: "Previous Page"
+- id: "post.prev.link"
   translation: "PRECEDENTE"
 
-- id: "Previous Post"
-  translation: "PRECEDENTE"
-
-- id: "No Previous Post"
+- id: "post.prev.empty"
   translation: "Nessun articolo precedente"
 
-- id: "Next Page"
+- id: "post.next.link"
   translation: "SUCCESSIVO"
 
-- id: "Next Post"
-  translation: "SUCCESSIVO"
-
-- id: "No Next Post"
+- id: "post.next.empty"
   translation: "Nessun articolo successivo"
 
-- id: "Recent Posts"
+- id: "menu.recent.posts"
   translation: "Articoli recenti"
 
-- id: "Toolbar"
+- id: "toolbar.wrap.tooltip"
   translation: "Barra degli strumenti"
 
-- id: "Categories"
+- id: "toolbar.i18n.tooltip"
+  translation: "Seleziona lingua"
+
+- id: "toolbar.top.tooltip"
+  translation: "Vai in alto"
+
+- id: "toolbar.bottom.tooltip"
+  translation: "Vai in basso"
+
+- id: "toolbar.back.tooltip"
+  translation: "Indietro"
+
+- id: "categories.terms.title"
   translation: "Categorie"
 
-- id: "Category Parent"
+- id: "categories.parent.subtutle"
   translation: "Categoria genitore"
 
-- id: "Category Child"
+- id: "categories.child.subtutle"
   translation: "Sottocategoria"
 
-- id: "Categories Root"
+- id: "categories.root.label"
   translation: "Tutte"
 
-- id: "Tags"
+- id: "tags.terms.title"
   translation: "Tag"
 
-- id: "Hide"
+- id: "series.hide.label"
   translation: "Nascondi"
 
-- id: "Show"
+- id: "series.show.label"
   translation: "Mostra lista"
 
-- id: "Close"
+- id: "search.close.tooltip"
   translation: "Chiudi"
 
-- id: "Search"
+- id: "search.action.label"
   translation: "Cerca"
 
-- id: "Search Input"
+- id: "search.input.label"
   translation: "Premi `/` per cercare"
 
-- id: "Search Placeholder"
+- id: "search.input.placeholder"
   translation: "Digita qui per cercare"
 
-- id: "Search Results"
+- id: "search.results.title"
   translation: "Risultati della ricerca"
 
-- id: "Search Tags"
+- id: "search.tags.title"
   translation: "Cerca tag"
 
-- id: "List Label"
+- id: "list.count.label"
   translation: "%s articoli"
 
-- id: "More Label"
+- id: "search.more.label"
   translation: "Vedi tutti i %d risultati"
 
-- id: "Search Label"
+- id: "search.count.label"
   translation: "%s risultati per \"%q\""
 
-- id: "Categories Label"
+- id: "categories.count.label"
   translation: "%s categorie"
 
-- id: "Tags Label"
+- id: "tags.count.label"
   translation: "%s etichette"
 
-- id: "Tags All"
+- id: "tags.op.checkbox"
   translation: "Trova tutti"
 
-- id: "Advanced Filters"
+- id: "search.filters.toggle"
   translation: "Filtri avanzati"
 
-- id: "No Results"
+- id: "search.results.empty"
   translation: "Nessun risultato trovato."
 
-- id: "Date Format"
+- id: "post.date.format"
   translation: "02/01/2006"
 
-- id: "Read Format Hour"
+- id: "reading.time.hour"
   translation: "%h h %m min di lettura"
 
-- id: "Read Format Min"
+- id: "reading.time.min"
   translation: "%m min di lettura"
 
-- id: "Read Format Sec"
+- id: "reading.time.sec"
   translation: "%s sec di lettura"
 
-- id: "searchConfig"
-  translation: "searchConfig"
+- id: "search.index.config"
+  translation: '{ cache: true }'
