--- a/i18n/zh-TW.yaml
+++ b/i18n/zh-TW.yaml
@@ -1,116 +1,122 @@
-- id: "Site Menu"
+- id: "menu.aside.tooltip"
   translation: "選單"
 
-- id: "Toggle Menu"
+- id: "menu.toggle.tooltip"
   translation: "展開/收合選單"
 
-- id: "Open Menu"
+- id: "menu.open.tooltip"
   translation: "開啟選單"
 
-- id: "Site ToC"
+- id: "toc.aside.tooltip"
   translation: "目錄"
 
-- id: "Toggle ToC"
+- id: "toc.toggle.tooltip"
   translation: "展開/收合目錄"
 
-- id: "Previous Page"
+- id: "post.prev.link"
   translation: "上一頁"
 
-- id: "Previous Post"
-  translation: "上一篇"
-
-- id: "No Previous Post"
+- id: "post.prev.empty"
   translation: "沒有上一篇文章"
 
-- id: "Next Page"
+- id: "post.next.link"
   translation: "下一頁"
 
-- id: "Next Post"
-  translation: "下一篇"
-
-- id: "No Next Post"
+- id: "post.next.empty"
   translation: "沒有下一篇文章"
 
-- id: "Recent Posts"
+- id: "menu.recent.posts"
   translation: "最新文章"
 
-- id: "Toolbar"
+- id: "toolbar.wrap.tooltip"
   translation: "工具列"
 
-- id: "Categories"
+- id: "toolbar.i18n.tooltip"
+  translation: "選擇語言"
+
+- id: "toolbar.top.tooltip"
+  translation: "回到頂部"
+
+- id: "toolbar.bottom.tooltip"
+  translation: "前往底部"
+
+- id: "toolbar.back.tooltip"
+  translation: "返回"
+
+- id: "categories.terms.title"
   translation: "分類"
 
-- id: "Category Parent"
+- id: "categories.parent.subtutle"
   translation: "父分類"
 
-- id: "Category Child"
+- id: "categories.child.subtutle"
   translation: "子分類"
 
-- id: "Categories Root"
+- id: "categories.root.label"
   translation: "全部"
 
-- id: "Tags"
+- id: "tags.terms.title"
   translation: "標籤"
 
-- id: "Hide"
+- id: "series.hide.label"
   translation: "隱藏"
 
-- id: "Show"
+- id: "series.show.label"
   translation: "顯示列表"
 
-- id: "Close"
+- id: "search.close.tooltip"
   translation: "關閉"
 
-- id: "Search"
+- id: "search.action.label"
   translation: "搜尋"
 
-- id: "Search Input"
+- id: "search.input.label"
   translation: "按 `/` 搜尋"
 
-- id: "Search Placeholder"
+- id: "search.input.placeholder"
   translation: "在此輸入搜尋內容"
 
-- id: "Search Results"
+- id: "search.results.title"
   translation: "搜尋結果"
 
-- id: "Search Tags"
+- id: "search.tags.title"
   translation: "搜尋標籤"
 
-- id: "List Label"
+- id: "list.count.label"
   translation: "%s篇文章"
 
-- id: "More Label"
+- id: "search.more.label"
   translation: "查看全部%d個結果"
 
-- id: "Search Label"
+- id: "search.count.label"
   translation: "\"%q\"的%s個搜尋結果"
 
-- id: "Categories Label"
+- id: "categories.count.label"
   translation: "全部 %s 個分類"
 
-- id: "Tags Label"
+- id: "tags.count.label"
   translation: "全部 %s 個標籤"
 
-- id: "Tags All"
+- id: "tags.op.checkbox"
   translation: "匹配所有"
 
-- id: "Advanced Filters"
+- id: "search.filters.toggle"
   translation: "進階篩選"
 
-- id: "No Results"
+- id: "search.results.empty"
   translation: "未找到結果."
 
-- id: "Date Format"
+- id: "post.date.format"
   translation: "2006年01月02日"
 
-- id: "Read Format Hour"
+- id: "reading.time.hour"
   translation: "%h小時%m分鐘閱讀"
 
-- id: "Read Format Min"
+- id: "reading.time.min"
   translation: "%m分鐘閱讀"
 
-- id: "Read Format Sec"
+- id: "reading.time.sec"
   translation: "%s秒閱讀"
 
-- id: "searchConfig"
-  translation: "searchConfig"
+- id: "search.index.config"
+  translation: '{ cache: true }'
